Enhance SalonOS backend configuration and database setup
- Updated `compose.yaml` to expose PostgreSQL port and modified `DATABASE_URL` format for compatibility with psycopg.
- Added `alembic.ini` for database migration management and created initial migration scripts for database schema.
- Introduced new models for user authentication, customer management, billing, and inventory tracking.
- Implemented utility functions for ID generation and invoice/ticket number creation.
- Seeded initial data for roles, users, and service categories to facilitate application setup.
- Established logging and audit mechanisms for tracking user actions and business events.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,11 +12,15 @@ dependencies = [
     "pydantic==2.5.0",
     "pydantic-settings==2.1.0",
     "python-jose[cryptography]==3.3.0",
-    "passlib[bcrypt]==1.7.4",
+    "passlib==1.7.4",
+    "bcrypt>=4.0.1",
     "python-multipart==0.0.6",
     "redis==5.0.1",
     "rq==1.15.1",
     "apscheduler==3.10.4",
+    "python-ulid>=2.2.0",
+    "pytz>=2023.3",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.optional-dependencies]
