--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,8 @@ services:
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - ./salon-data/postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - salon_internal
     healthcheck:
@@ -46,7 +48,7 @@ services:
       dockerfile: Dockerfile
     container_name: salon-api
     environment:
-      - DATABASE_URL=postgresql://salon_user:change_me_123@postgres:5432/salon_db
+      - DATABASE_URL=postgresql+psycopg://salon_user:change_me_123@postgres:5432/salon_db
       - REDIS_URL=redis://redis:6379/0
       - SECRET_KEY=${SECRET_KEY:-change_me_please}
       - ENVIRONMENT=${ENVIRONMENT:-development}
@@ -75,7 +77,7 @@ services:
     container_name: salon-worker
     command: python -m app.worker
     environment:
-      - DATABASE_URL=postgresql://salon_user:change_me_123@postgres:5432/salon_db
+      - DATABASE_URL=postgresql+psycopg://salon_user:change_me_123@postgres:5432/salon_db
       - REDIS_URL=redis://redis:6379/0
       - SECRET_KEY=${SECRET_KEY:-change_me_please}
       - ENVIRONMENT=${ENVIRONMENT:-development}
@@ -105,15 +107,7 @@ services:
       api:
         condition: service_healthy
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--quiet",
-          "--tries=1",
-          "--spider",
-          "http://localhost/healthz",
-        ]
+      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
       interval: 10s
       timeout: 3s
       retries: 3
