chore: update infrastructure and configuration files

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,180 @@
-DB_PASSWORD=your_secure_password_here
-SECRET_KEY=your_secret_key_here_use_openssl_rand_hex_32
+# =============================================================================
+# SalonOS Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your actual values
+# Command: cp .env.example .env
+# =============================================================================
+
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+# PostgreSQL database credentials
+# IMPORTANT: Change these from defaults immediately!
+POSTGRES_DB=salon_db
+POSTGRES_USER=salon_user
+POSTGRES_PASSWORD=CHANGE_ME_IMMEDIATELY_use_openssl_rand_base64_32
+
+# =============================================================================
+# REDIS CONFIGURATION
+# =============================================================================
+# Redis password for cache and queue
+# Leave empty for development, REQUIRED for production
+# Generate with: openssl rand -base64 32
+REDIS_PASSWORD=CHANGE_ME_IMMEDIATELY_use_openssl_rand_base64_32
+
+# =============================================================================
+# SECURITY CONFIGURATION
+# =============================================================================
+# Secret key for JWT token signing and encryption
+# CRITICAL: This must be a strong, random string
+# Generate with: openssl rand -hex 32
+# Minimum length: 32 characters
+SECRET_KEY=CHANGE_ME_IMMEDIATELY_use_openssl_rand_hex_32
+
+# JWT token expiration (in minutes)
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+# Environment: development, staging, production
 ENVIRONMENT=production
-SALON_NAME=Your Salon Name
-SALON_ADDRESS=Your Salon Address
-GSTIN=29XXXXX1234X1ZX
+
+# Enable debug mode (true/false)
+# WARNING: Set to false in production
+DEBUG=false
+
+# Timezone (IANA timezone format)
+# Default: Asia/Kolkata
 TZ=Asia/Kolkata
+
+# =============================================================================
+# CORS CONFIGURATION
+# =============================================================================
+# Allowed origins for Cross-Origin Resource Sharing
+# Comma-separated list of URLs
+# Production: Only include your actual domain
+# Development: Can include localhost
+CORS_ORIGINS=http://salon.local
+
+# =============================================================================
+# SALON INFORMATION
+# =============================================================================
+# Your salon's business details
+# These appear on receipts and reports
+
+# Salon name (appears on receipts)
+SALON_NAME=Your Salon Name Here
+
+# Salon full address (appears on receipts)
+# Use \n for line breaks
+SALON_ADDRESS=123 Main Street\nCity, State - 123456\nPhone: +91-1234567890
+
+# GST Identification Number (15 characters)
+# Format: 99AAAAA9999A9Z9
+# Example: 29ABCDE1234F1Z5
+GSTIN=29XXXXX1234X1ZX
+
+# =============================================================================
+# FINANCIAL YEAR CONFIGURATION
+# =============================================================================
+# Financial year start month (1-12)
+# India: 4 (April)
+FINANCIAL_YEAR_START_MONTH=4
+
+# =============================================================================
+# BACKUP CONFIGURATION
+# =============================================================================
+# Backup retention period (in days)
+BACKUP_RETENTION_DAYS=7
+
+# Backup schedule (cron format)
+# Default: 23:30 IST daily
+BACKUP_SCHEDULE=30 23 * * *
+
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Log format: json or text
+LOG_FORMAT=json
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+# Rate limit for authentication endpoints (requests per minute)
+AUTH_RATE_LIMIT=5
+
+# Rate limit for API endpoints (requests per minute)
+API_RATE_LIMIT=60
+
+# =============================================================================
+# EMAIL CONFIGURATION (Optional - for future use)
+# =============================================================================
+# SMTP settings for email notifications
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASSWORD=your-app-password
+# EMAIL_FROM=noreply@yourSalon.com
+# EMAIL_USE_TLS=true
+
+# =============================================================================
+# WHATSAPP INTEGRATION (Optional - for future use)
+# =============================================================================
+# WhatsApp Business API credentials
+# WHATSAPP_API_KEY=your-api-key
+# WHATSAPP_PHONE_NUMBER=+91xxxxxxxxxx
+# WHATSAPP_ENABLED=false
+
+# =============================================================================
+# ADVANCED CONFIGURATION (Optional)
+# =============================================================================
+# Database connection pool size
+# DB_POOL_SIZE=5
+# DB_MAX_OVERFLOW=10
+
+# Redis max connections
+# REDIS_MAX_CONNECTIONS=10
+
+# Worker concurrency (number of parallel jobs)
+# WORKER_CONCURRENCY=4
+
+# Session timeout (in minutes)
+# SESSION_TIMEOUT=60
+
+# =============================================================================
+# GENERATION COMMANDS
+# =============================================================================
+# Use these commands to generate secure random values:
+#
+# SECRET_KEY:
+#   openssl rand -hex 32
+#
+# PASSWORDS:
+#   openssl rand -base64 32
+#
+# Example:
+#   SECRET_KEY=$(openssl rand -hex 32)
+#   echo "SECRET_KEY=$SECRET_KEY" >> .env
+#
+# =============================================================================
+
+# =============================================================================
+# VALIDATION CHECKLIST
+# =============================================================================
+# Before deploying to production, ensure:
+# [ ] All CHANGE_ME values are replaced
+# [ ] POSTGRES_PASSWORD is strong (32+ characters)
+# [ ] REDIS_PASSWORD is set and strong
+# [ ] SECRET_KEY is generated with openssl rand -hex 32
+# [ ] ENVIRONMENT is set to "production"
+# [ ] DEBUG is set to "false"
+# [ ] CORS_ORIGINS contains only your actual domain
+# [ ] SALON_NAME, SALON_ADDRESS, GSTIN are correct
+# [ ] File permissions are secure: chmod 600 .env
+# [ ] .env is added to .gitignore (verify!)
+# =============================================================================
