--- a/compose.production.yaml
+++ b/compose.production.yaml
@@ -1,9 +1,27 @@
-name: efs-salon-os
+# SalonOS - Production Docker Compose Configuration
+# This file uses pre-built images from DockerHub
+#
+# Usage:
+#   docker compose -f compose.production.yaml up -d
+#
+# Prerequisites:
+#   - Docker and Docker Compose installed
+#   - .env file configured with your settings
+#
+# Images are pulled from DockerHub - no local build required
+
+name: salon-os
 
 networks:
   salon_internal:
     driver: bridge
-    internal: false  # Set to true in production to isolate from external networks
+    internal: false
+
+volumes:
+  postgres_data:
+  redis_data:
+  logs:
+  backups:
 
 services:
   postgres:
@@ -15,10 +33,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
-      - ./salon-data/postgres:/var/lib/postgresql/data
-    # DO NOT expose PostgreSQL to host network in production
-    # ports:
-    #   - "5432:5432"  # Only for development - commented out for security
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - salon_internal
     healthcheck:
@@ -27,44 +42,55 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
+        reservations:
+          cpus: '1.0'
+          memory: 1G
 
   redis:
     image: redis:7-alpine
     container_name: salon-redis
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
-    # DO NOT expose Redis to host network in production
-    # ports:
-    #   - "6379:6379"  # Only for development - commented out for security
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     volumes:
-      - ./salon-data/redis:/data
+      - redis_data:/data
     networks:
       - salon_internal
     healthcheck:
-      test: ["CMD", "redis-cli", "--no-auth-warning", "-a", "${REDIS_PASSWORD:-}", "ping"]
+      test: ["CMD", "redis-cli", "--no-auth-warning", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 10s
       timeout: 3s
       retries: 5
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
 
   api:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    # REPLACE WITH YOUR DOCKERHUB USERNAME
+    image: ${DOCKERHUB_USERNAME:-yourusername}/salon-backend:${VERSION:-latest}
     container_name: salon-api
     environment:
       - DATABASE_URL=postgresql+psycopg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - SECRET_KEY=${SECRET_KEY}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - ENVIRONMENT=production
+      - DEBUG=false
       - CORS_ORIGINS=${CORS_ORIGINS:-http://salon.local}
       - SALON_NAME=${SALON_NAME}
       - SALON_ADDRESS=${SALON_ADDRESS}
       - GSTIN=${GSTIN}
       - TZ=${TZ:-Asia/Kolkata}
     volumes:
-      # Development only - comment out for production
-      - ./backend:/app
-      - ./salon-data/logs:/app/logs
+      - logs:/app/logs
     networks:
       - salon_internal
     depends_on:
@@ -73,33 +99,39 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/healthz"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 30s
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
+        reservations:
+          cpus: '1.0'
+          memory: 1G
 
   worker:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    # REPLACE WITH YOUR DOCKERHUB USERNAME
+    image: ${DOCKERHUB_USERNAME:-yourusername}/salon-backend:${VERSION:-latest}
     container_name: salon-worker
     command: python -m app.worker
     environment:
       - DATABASE_URL=postgresql+psycopg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       - SECRET_KEY=${SECRET_KEY}
-      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - ENVIRONMENT=production
+      - DEBUG=false
       - SALON_NAME=${SALON_NAME}
       - SALON_ADDRESS=${SALON_ADDRESS}
       - GSTIN=${GSTIN}
       - TZ=${TZ:-Asia/Kolkata}
     volumes:
-      # Development only - comment out for production
-      - ./backend:/app
-      - ./salon-data/backups:/backups
-      - ./salon-data/logs:/app/logs
+      - backups:/backups
+      - logs:/app/logs
     networks:
       - salon_internal
     depends_on:
@@ -114,14 +146,22 @@ services:
       retries: 3
       start_period: 40s
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    # REPLACE WITH YOUR DOCKERHUB USERNAME
+    image: ${DOCKERHUB_USERNAME:-yourusername}/salon-frontend:${VERSION:-latest}
     container_name: salon-frontend
     environment:
       - NODE_ENV=production
+      - NEXT_TELEMETRY_DISABLED=1
     networks:
       - salon_internal
     depends_on:
@@ -134,6 +174,14 @@ services:
       retries: 3
       start_period: 30s
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
 
   nginx:
     image: nginx:alpine
@@ -141,7 +189,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - salon_internal
     depends_on:
@@ -150,8 +198,16 @@ services:
       frontend:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/healthz"]
+      test: ["CMD", "curl", "-f", "http://localhost/api/healthz"]
       interval: 10s
       timeout: 3s
       retries: 3
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
