--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,9 +24,13 @@ http {
         server api:8000;
     }
 
+    upstream frontend {
+        server frontend:3000;
+    }
+
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost salon.local;
 
         # Health check endpoint (nginx itself)
         location /healthz {
@@ -51,12 +55,33 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 60s;
+            proxy_connect_timeout 60s;
         }
 
-        # Root - temporary message
+        # Next.js static files and assets
+        location /_next/ {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Frontend - Next.js application
         location / {
-            return 200 "SalonOS - Frontend Coming Soon\n";
-            add_header Content-Type text/plain;
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 60s;
+            proxy_connect_timeout 60s;
         }
     }
 }
