feat: Implement nullable customer and appointment phone numbers, add staff service provider filtering, and update attendance marking timestamps.

--- a/.env.example
+++ b/.env.example
@@ -95,7 +95,7 @@ TZ=Asia/Kolkata
 # Comma-separated list of URLs
 # Production: Only include your actual domain
 # Development: Can include localhost
-CORS_ORIGINS=http://salon.local
+CORS_ORIGINS=http://localhost
 
 # =============================================================================
 # SALON INFORMATION
