--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost salon.local;
+        server_name localhost;
 
         # Health check endpoint (nginx itself)
         location /healthz {
