feat: Implement HTTPS configuration, enhance barcode scanner camera initialization and permissions, and apply responsive UI updates to purchase forms.

--- a/.env.example
+++ b/.env.example
@@ -95,7 +95,8 @@ TZ=Asia/Kolkata
 # Comma-separated list of URLs
 # Production: Only include your actual domain
 # Development: Can include localhost
-CORS_ORIGINS=http://localhost
+# Note: Include both HTTP and HTTPS if using SSL
+CORS_ORIGINS=http://salon.local,https://salon.local,http://localhost,https://localhost
 
 # =============================================================================
 # SALON INFORMATION
