--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,69 +7,65 @@ http {
     default_type application/octet-stream;
 
     # Logging
-    log_format json_combined escape=json
-        '{'
-        '"time":"$time_iso8601",'
-        '"remote_addr":"$remote_addr",'
-        '"request":"$request",'
-        '"status":$status,'
-        '"body_bytes_sent":$body_bytes_sent,'
-        '"request_time":$request_time'
-        '}';
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-    access_log /var/log/nginx/access.log json_combined;
-    error_log /var/log/nginx/error.log warn;
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss;
 
-    upstream api_backend {
-        server api:8000;
-    }
+    # Client settings
+    client_max_body_size 50M;
 
+    # Upstream services
     upstream frontend {
         server frontend:3000;
     }
 
+    upstream api {
+        server api:8000;
+    }
+
+    # HTTP Server - Redirect to HTTPS (except healthcheck)
     server {
         listen 80;
-        server_name localhost;
+        server_name _;  # Catch all (including IP addresses)
 
-        # Health check endpoint (nginx itself)
+        # Health check (allow on HTTP for Docker healthcheck)
         location /healthz {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
         }
 
-        # API Documentation routes
-        location ~ ^/(docs|redoc|openapi.json) {
-            proxy_pass http://api_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        # Redirect all other traffic to HTTPS
+        location / {
+            return 301 https://$host$request_uri;  # Preserve the hostname/IP user entered
         }
+    }
 
-        # API routes - forward with /api prefix intact
-        location /api/ {
-            proxy_pass http://api_backend/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 60s;
-            proxy_connect_timeout 60s;
-        }
+    # HTTPS Server
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name _;  # Accept all hostnames/IPs
 
-        # Next.js static files and assets
-        location /_next/ {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
+        # SSL Configuration
+        ssl_certificate /etc/nginx/ssl/salon.crt;
+        ssl_certificate_key /etc/nginx/ssl/salon.key;
 
-        # Frontend - Next.js application
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+
+        # Frontend (Next.js)
         location / {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
@@ -80,8 +76,31 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 60s;
-            proxy_connect_timeout 60s;
+
+            # Next.js hot reload
+            proxy_read_timeout 86400;
+        }
+
+        # API (FastAPI)
+        location /api/ {
+            proxy_pass http://api;  # No trailing slash - preserve /api prefix
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # CORS headers (if needed)
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+        }
+
+        # Health check
+        location /healthz {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
     }
 }
