--- a/compose.yaml
+++ b/compose.yaml
@@ -140,8 +140,10 @@ services:
     container_name: salon-nginx
     ports:
       - "80:80"
+      - "443:443"  # HTTPS port
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro  # SSL certificates (create with setup-https.sh)
     networks:
       - salon_internal
     depends_on:
